(chore) various copy tweaks

--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -86,7 +86,7 @@ Check your answers before sending your feedback — {{ serviceName }}
 
     <p class="govuk-body">Your feedback and comments will be made anonymous and sent to Ofsted and {{ schoolName }}.</p>
 
-    <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing and using your responses in reports.</p>
+    <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing your responses.</p>
 
     <form action="/leave-feedback/confirmation" method="post" novalidate>
 
