--- a/app/views/leave-feedback/questions/additional-feedback.html
+++ b/app/views/leave-feedback/questions/additional-feedback.html
@@ -32,7 +32,7 @@ Do you have any additional feedback? — {{ serviceName }}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
 
-    <form action="check-your-answers" method="post" class="form">
+    <form action="/leave-feedback/check-your-answers" method="post" class="form">
 
       {{ govukCharacterCount({
         name: "additional-feedback",
