--- a/app/views/leave-feedback/sharing-information-consent.html
+++ b/app/views/leave-feedback/sharing-information-consent.html
@@ -12,30 +12,10 @@ What happens with your feedback — {{ serviceName }}
 {% block beforeContent %}
 {% endblock %}
 
-{% macro surveyPager() %}
-{% if editing %}
-  "/leave-feedback/check-your-answers"
-{% else %}
-  "/leave-feedback/multiple-children"
-{% endif %}
-{% endmacro %}
-
 {% block content %}
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-    {% if editing %}
-      {{ govukBackLink({
-        text: "Back to your answers",
-        href: "/leave-feedback/check-your-answers"
-      }) }}
-    {% else %}
-      {{ govukBackLink({
-        text: "Back",
-        href: "start"
-      }) }}
-    {% endif %}
 
     <h1 class="govuk-heading-l">What happens with your feedback</h1>
 
@@ -43,7 +23,7 @@ What happens with your feedback — {{ serviceName }}
 
     <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing your responses.</p>
 
-    <form action={{surveyPager()}} method="post" class="form">
+    <form action="{{ '/leave-feedback/check-your-answers' if editing else '/leave-feedback/multiple-children' }}" method="post" class="form">
 
       {% set emailHtml %}
         {{ govukInput({
