--- a/app/views/leave-feedback/questions/additional-feedback.html
+++ b/app/views/leave-feedback/questions/additional-feedback.html
@@ -23,7 +23,7 @@ Do you have any additional feedback? — {{ serviceName }}
   {% else %}
   {{ govukBackLink({
       text: "Back",
-      href: finalQuestionUrl
+      href: 'school-i-would-recommend'
     }) }}
   {% endif %}
 {% endblock %}
@@ -32,7 +32,7 @@ Do you have any additional feedback? — {{ serviceName }}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
 
-    <form action="/leave-feedback/check-your-answers" method="post" class="form">
+    <form action="{{ '/leave-feedback/check-your-answers' if editing else '/leave-feedback/add-another-child' }}" method="post" class="form">
 
       {{ govukCharacterCount({
         name: "additional-feedback",
