--- a/app/views/leave-feedback/questions/my-child-has-send-2.html
+++ b/app/views/leave-feedback/questions/my-child-has-send-2.html
@@ -7,9 +7,9 @@
 {% set pageTitle = "My child has SEND (Special Educational Needs and Disabilities), and I believe they are being helped to succeed at Greenwood High School" %}
 {% set questionNumber = "4" %}
 {% set questionText = "My child has SEND (Special Educational Needs and Disabilities), and I believe they are being helped to succeed at Greenwood High School" %}
-{% set questionSanitised = "my-child-has-send" %}
-{% set backLink = "my-child-can-reach-potential" %}
-{% set nextPage = "school-has-high-expectations" %}
+{% set questionSanitised = "my-child-has-send-2" %}
+{% set backLink = "my-child-can-reach-potential-2" %}
+{% set nextPage = "school-has-high-expectations-2" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
@@ -23,7 +23,7 @@
     {% if editing %}
       {{ govukBackLink({
         text: "Back to your answers",
-        href: "/leave-feedback/check-your-answers"
+        href: "/leave-feedback/check-your-answers-2"
       }) }}
     {% else %}
       {{ govukBackLink({
@@ -34,7 +34,7 @@
 
     <span class="govuk-caption-xl">Question {{ questionNumber }} of 14</span>
 
-    <form action="{{ '/leave-feedback/check-your-answers' if editing else nextPage }}" method="post" class="form">
+    <form action="{{ '/leave-feedback/check-your-answers-2' if editing else nextPage }}" method="post" class="form">
 
       {{ govukRadios({
         idPrefix: questionSanitised,
