Change content on multiple-children page

--- a/app/views/leave-feedback/add-another-child.html
+++ b/app/views/leave-feedback/add-another-child.html
@@ -24,7 +24,8 @@ Do you want to add answers for another child? — {{ serviceName }}
         name: "add-child",
         fieldset: {
           legend: {
-            text: "Do you want to add answers for another child?",
+            text: "Do you want to give feedback for another child at the Greenwood High School?
+",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
           }
