--- a/app/views/leave-feedback/questions/my-child-is-happy.html
+++ b/app/views/leave-feedback/questions/my-child-is-happy.html
@@ -8,7 +8,7 @@
 {% set questionNumber = "1" %}
 {% set questionText = "My child is happy at Greenwood High School" %}
 {% set questionSanitised = "my-child-is-happy" %}
-{% set backLink = "multiple-children" %}
+{% set backLink = "../multiple-children" %}
 {% set nextPage = "my-child-feels-safe" %}
 
 {% block pageTitle %}
@@ -94,4 +94,3 @@
 
 
 {% endblock %}
-
