--- a/app/views/leave-feedback/questions/my-child-has-send-2.html
+++ b/app/views/leave-feedback/questions/my-child-has-send-2.html
@@ -5,11 +5,11 @@
 {% from "back-link/macro.njk" import govukBackLink %}
 
 {% set pageTitle = "My child has SEND (Special Educational Needs and Disabilities), and I believe they are being helped to succeed at Greenwood High School" %}
-{% set questionNumber = "4" %}
+{% set questionNumber = "5" %}
 {% set questionText = "My child has SEND (Special Educational Needs and Disabilities), and I believe they are being helped to succeed at Greenwood High School" %}
 {% set questionSanitised = "my-child-has-send-2" %}
-{% set backLink = "my-child-can-reach-potential-2" %}
-{% set nextPage = "school-has-high-expectations-2" %}
+{% set backLink = "school-makes-me-aware-2" %}
+{% set nextPage = "school-staff-changes-2" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
@@ -102,4 +102,3 @@
 
 
 {% endblock %}
-
