--- a/app/views/leave-feedback/questions/school-updates-me-2.html
+++ b/app/views/leave-feedback/questions/school-updates-me-2.html
@@ -9,7 +9,7 @@
 {% set questionText = "Greenwood High School updates me regularly about how my child is getting on" %}
 {% set questionSanitised = "school-updates-me-2" %}
 {% set backLink = "school-my-concerns-2" %}
-{% set nextPage = "school-makes-me-aware-2" %}
+{% set nextPage = "my-child-at-boarding-school-2" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
@@ -94,4 +94,3 @@
 
 
 {% endblock %}
-
