--- a/app/views/leave-feedback/questions/my-child-at-boarding-school.html
+++ b/app/views/leave-feedback/questions/my-child-at-boarding-school.html
@@ -4,12 +4,12 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School has high expectations for all its pupils" %}
-{% set questionNumber = "5" %}
-{% set questionText = "Greenwood High School has high expectations for all its pupils" %}
-{% set questionSanitised = "school-has-high-expectations" %}
-{% set backLink = "my-child-has-send" %}
-{% set nextPage = "school-staff-changes" %}
+{% set pageTitle = "My child is at boarding school and I am happy with how it looks after the eating and sleeping arrangements for my child" %}
+{% set questionNumber = "13" %}
+{% set questionText = "My child is at boarding school and I am happy with how it looks after the eating and sleeping arrangements for my child" %}
+{% set questionSanitised = "my-child-at-boarding-school" %}
+{% set backLink = "school-updates-me" %}
+{% set nextPage = "school-i-would-recommend" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
@@ -71,6 +71,14 @@
             text: "Don‘t know",
             value: "Don‘t know",
             checked: checked(questionSanitised, "Don‘t know")
+          },
+          {
+            divider: "Or"
+          },
+          {
+            text: "My child is not at a boarding school",
+            value: "My child is not at a boarding school",
+            checked: checked(questionSanitised, "My child is not at a boarding school")
           }
         ]
       }) }}
@@ -94,4 +102,3 @@
 
 
 {% endblock %}
-
