--- a/app/views/leave-feedback/questions/my-child-can-reach-potential.html
+++ b/app/views/leave-feedback/questions/my-child-can-reach-potential.html
@@ -4,12 +4,12 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School does its best to ensure that they reach their potential" %}
+{% set pageTitle = "Greenwood High School does its best to ensure that my child reaches their potential" %}
 {% set questionNumber = "3" %}
-{% set questionText = "Greenwood High School does its best to ensure that they reach their potential" %}
+{% set questionText = "Greenwood High School does its best to ensure that my child reaches their potential" %}
 {% set questionSanitised = "my-child-can-reach-potential" %}
 {% set backLink = "my-child-feels-safe" %}
-{% set nextPage = "my-child-has-send" %}
+{% set nextPage = "school-makes-me-aware" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
@@ -94,4 +94,3 @@
 
 
 {% endblock %}
-
