--- a/app/views/leave-feedback/questions/school-extracurricular-interests-2.html
+++ b/app/views/leave-feedback/questions/school-extracurricular-interests-2.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "My child has the opportunity to explore extracurricular interests at Greenwood High School" %}
+{% set pageTitle = "Greenwood High School offers clubs and activities during lunchtime, before or after school" %}
 {% set questionNumber = "7" %}
-{% set questionText = "My child has the opportunity to explore extracurricular interests at Greenwood High School" %}
+{% set questionText = "Greenwood High School offers clubs and activities during lunchtime, before or after school" %}
 {% set questionSanitised = "school-extracurricular-interests-2" %}
 {% set backLink = "school-staff-changes-2" %}
 {% set nextPage = "my-child-successful-rounded-2" %}
@@ -45,9 +45,6 @@
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
           }
-        },
-        hint: {
-          text: "e.g. in preschool/lunchtime/afterschool clubs and societies"
         },
         items: [
           {
@@ -97,4 +94,3 @@
 
 
 {% endblock %}
-
