--- a/app/views/leave-feedback/questions/school-i-would-recommend.html
+++ b/app/views/leave-feedback/questions/school-i-would-recommend.html
@@ -8,7 +8,7 @@
 {% set questionNumber = "14" %}
 {% set questionText = "I would recommend Greenwood High School to another parent" %}
 {% set questionSanitised = "school-i-would-recommend" %}
-{% set backLink = "school-makes-me-aware" %}
+{% set backLink = "my-child-at-boarding-school" %}
 {% set nextPage = "additional-feedback" %}
 
 {% block pageTitle %}
@@ -94,4 +94,3 @@
 
 
 {% endblock %}
-
