--- a/app/views/leave-feedback/questions/school-makes-me-aware.html
+++ b/app/views/leave-feedback/questions/school-makes-me-aware.html
@@ -4,12 +4,12 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School makes me aware of what my child should be able to know and do at this stage" %}
-{% set questionNumber = "13" %}
-{% set questionText = "Greenwood High School makes me aware of what my child should be able to know and do at this stage" %}
+{% set pageTitle = "Greenwood High School tells me what my child will be learning in the forthcoming term or year" %}
+{% set questionNumber = "4" %}
+{% set questionText = "Greenwood High School tells me what my child will be learning in the forthcoming term or year" %}
 {% set questionSanitised = "school-makes-me-aware" %}
-{% set backLink = "school-updates-me" %}
-{% set nextPage = "school-i-would-recommend" %}
+{% set backLink = "my-child-can-reach-potential" %}
+{% set nextPage = "my-child-has-send" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
@@ -94,4 +94,3 @@
 
 
 {% endblock %}
-
