--- a/app/views/leave-feedback/questions/school-staff-changes.html
+++ b/app/views/leave-feedback/questions/school-staff-changes.html
@@ -4,11 +4,11 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "There have been a high number of staff changes at Greenwood High School over the last year" %}
+{% set pageTitle = "There have been a high number of teaching staff changes at Greenwood High School over the last year" %}
 {% set questionNumber = "6" %}
-{% set questionText = "There have been a high number of staff changes at Greenwood High School over the last year" %}
+{% set questionText = "There have been a high number of teaching staff changes at Greenwood High School over the last year" %}
 {% set questionSanitised = "school-staff-changes" %}
-{% set backLink = "school-has-high-expectations" %}
+{% set backLink = "my-child-has-send" %}
 {% set nextPage = "school-extracurricular-interests" %}
 
 {% block pageTitle %}
@@ -94,4 +94,3 @@
 
 
 {% endblock %}
-
